2008-02-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/clearlooks.xml.in.in:
	CLASSIC is the default Clearlooks style

2008-02-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	... forgot to assign the CLAMP to the radius :)

2008-02-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Reverted some code, that was not useless :P

2008-02-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.14.5 release.

2008-02-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Fixed small warning. (Some useless code.)

2008-02-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Add checks for vertical toolbars and menubars. These are will not be
	drawn at for now.

2008-02-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	As the panel sets the shadow to NONE too, we do not need a special
	case for it anymore.

2008-02-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Added a small comment to the handlebox/toolbar special case.

2008-02-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Removed a "&" that caused this special case not to work
	The second toolbar of file-roller is still not working

2008-02-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Managed handlebox_bin and dockitem_bin special cases
	for toolbar's shadow-type
	To use this setting place this in the gtkrc:
	GtkMenuBar::shadow_type = GTK_SHADOW_NONE